--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "0.16.1",
     "bootstrap-sass": "^3.3.7",
     "class-autobind": "0.1.4",
+    "express": "4.15.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "object-assign": "4.1.1",
@@ -50,6 +51,7 @@
   "scripts": {
     "start": "npm-run-all --parallel serve",
     "serve": "babel-node tools/server.js",
+    // "prod": "NODE_ENV=production node tools/server.js",
     "clean": "rimraf dist && mkdir dist",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --no-color --config webpack.config.prod.babel.js --bail"
   }
