--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "topicpicker",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": ">=3"
+  },
+  "scripts": {
+    "start": "npm-run-all --parallel serve",
+    "serve": "babel-node tools/server.js",
+    "clean": "rimraf dist && mkdir dist",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --no-color --config webpack.config.prod.babel.js --bail"
+  },
   "dependencies": {
     "axios": "0.16.1",
     "bootstrap-sass": "^3.3.7",
@@ -12,8 +21,14 @@
     "react": "15.5.4",
     "react-bootstrap": "latest",
     "react-dom": "15.5.4",
+    "react-redux": "5.0.4",
     "react-router": "^3.0.0",
-    "react-router-bootstrap": "0.23.1"
+    "react-router-bootstrap": "0.23.1",
+    "react-router-redux": "4.0.8",
+    "redux": "3.6.0",
+    "redux-devtools-extension": "^2.13.0",
+    "redux-promise": "0.5.3",
+     "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -46,11 +61,5 @@
     "webpack": "^2.3.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.12.2"
-  },
-  "scripts": {
-    "start": "npm-run-all --parallel serve",
-    "serve": "babel-node tools/server.js",
-    "clean": "rimraf dist && mkdir dist",
-    "build": "npm run clean && cross-env NODE_ENV=production webpack --no-color --config webpack.config.prod.babel.js --bail"
-  }
+  } 
 }
