--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux": "3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-promise": "0.5.3",
-     "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "rimraf": "^2.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -61,5 +62,5 @@
     "webpack": "^2.3.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.12.2"
-  } 
+  }
 }
